task/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guestbook
    name: guestbook
    tier: frontend

  name: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook
      name: guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: guestbook
        name: guestbook
        tier: frontend
    spec:
      containers:
      - image: paulczar/gb-frontend:v5
        name: gb-frontend
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
