task/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-deployment
    name: mongo
    tier: backend
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-deployment
      name: mongo
      tier: backend
  template:
    metadata:
      labels:
        app: mongo-deployment
        name: mongo
        tier: backend
    spec:
      containers:
      - image: mongo:4.2
        name: mongo
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
