task/guestbook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: guestbook-svc
  name: guestbook-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32555
  selector:
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
