task/rollapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rollapp-svc
  name: rollapp-svc
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 32000
  selector:
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
