task/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: guestbook-svc
    servicePort: 80
  rules:
  - host: lab.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rollapp-svc
          servicePort: 8080
      - path: /guestbook
        backend:
          serviceName: guestbook-svc
          servicePort: 80
      - path: /rollapp
        backend:
          serviceName: rollapp-svc
          servicePort: 8080
